@@ -1,0 +1,2 @@
+--platform 'SQLite'
+--database tests/inputs/cif_cod_numbers/sqlite3/cod-enantiomer-test.sqlite3
