@@ -1,0 +1,6 @@
+Test the way an entry with a related enantiomer entry is handled when the
+related enantiomer entry is not explicitly marked using the relevant COD
+data items (i.e. _cod_related_enantiomer_entry.code,
+_cod_related_enantiomer_entry_code, _cod_enantiomer_of).
+Both the original entry and its enantiomer should be recognised as matching
+COD entries.
