@@ -1,0 +1,1 @@
+../inputs/cif_cod_numbers/cif/cod-enantiomer-test-enantiomers-of-0000001.cif
