@@ -1,0 +1,5 @@
+Test the way an entry with a related enantiomer entry is handled when the
+related enantiomer entry is explicitly marked using a relevant COD data
+item (i.e. _cod_related_enantiomer_entry.code,
+_cod_related_enantiomer_entry_code, _cod_enantiomer_of).
+Only the original entry should be recognised as a matching COD entry.
