@@ -1,0 +1,2 @@
+H                                           0000001   2 tests/cases/cif_cod_numbers_022.inp
+H                                           0000004   2 tests/cases/cif_cod_numbers_022.inp
