@@ -1,0 +1,3 @@
+H2                                          0000004   1 tests/cases/cif_cod_numbers_023.inp
+H3                                          0000004   1 tests/cases/cif_cod_numbers_023.inp
+H4                                          0000004   1 tests/cases/cif_cod_numbers_023.inp
