@@ -15,7 +15,11 @@ cod-tools (unreleased)
          that were introduced in DDL1 'cif_cod.dic' dictionary version 0.040.
      - COD::CIF::Data::CIF2COD:
        - updated the cif2cod() subroutine to take into consideration data items
-         that were introduced in DDL1 'cif_cod.dic' dictionary version 0.040.
+         that were introduced in DDL1 'cif_cod.dic' dictionary version 0.040;
+     - COD::CIF::Data::CODNumbers:
+       - updated the cif_fill_data() and entries_are_the_same() subroutines
+         to take into consideration data items that were introduced in
+         DDL1 'cif_cod.dic' dictionary version 0.040.
   * Fixed:
     - codcif:
       - non-orthogonal flag bits were used in CIF_FLEX_LEXER_FLAGS enum;
